re PR preprocessor/7602 (C++ header files found in CPLUS_INCLUDE_PATH treated as C headers)

PR preprocessor/7602
	* cppinit.c (path_include): Treat the system environment
	variables as being cxx_aware.

From-SVN: r56415